Fixed bridge page text align
Added header padding on mobile

--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ header > a, img.Logo {
 h1 {
     font-size: 24px;
     text-align: center;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 /* Pages other than about with title */
@@ -369,20 +371,27 @@ body > h2 {
         width: 50%;
     }
 
-    .Content.Project .half-right {
-        width: 50%;
+	.Content.Project .half-right, .Content.Project .half-left {
+	    width: 50%;
         box-sizing: border-box;
-
+	}
+		
+    .Content.Project .half-right {	
+		text-align: left;
         padding-left: 20px;
         padding-right: 90px;
     }
 
     .Content.Project .half-left {
-        width: 50%;
-        box-sizing: border-box;
-
         text-align: right;
         padding-left: 90px;
+        padding-right: 20px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .Content.Project .half-right, .Content.Project .half-left {
+        padding-left: 20px;
         padding-right: 20px;
     }
 }
